--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <video width="320" height="240" controls>
-  <source src=".mp4" type="video/mp4">
+  <source src="https://minuke73.github.io/donga_test/test2.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
