--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <video width="1280" height="960" controls>
   <source src="https://minuke73.github.io/donga_test/test2.mp4" type="video/mp4">
+  <track src="https://minuke73.github.io/donga_test/test2.vtt" kind="subtitles" srclang="ko" label="Korea">
   Your browser does not support the video tag.
 </video>
 
