--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <video width="1280" height="960" controls>
   <source src="https://minuke73.github.io/donga_test/test2.mp4" type="video/mp4">
-  <track src="https://minuke73.github.io/donga_test/중학_정보_1-1_컴퓨팅 시스템(대단원 도입)_v1-1.vtt" default="default" kind="subtitles" srclang="ko" label="Korea">
+  <track src="https://minuke73.github.io/donga_test/1-01-1-1_1 컴퓨팅 시스템의 이해_v1.vtt" default="default" kind="subtitles" srclang="ko" label="Korea">
   Your browser does not support the video tag.
 </video>
 
