--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <video width="1280" height="960" controls>
   <source src="https://minuke73.github.io/donga_test/test2.mp4" type="video/mp4">
-  <track src="https://minuke73.github.io/donga_test/중학_정보_3-03-3-1-1_우리 반 리스트 만들기(실습)_v3.vtt" default="default" kind="subtitles" srclang="ko" label="Korea">
+  <track src="https://minuke73.github.io/donga_test/중학_정보_2-1_데이터(대단원 도입)_v1.vtt" default="default" kind="subtitles" srclang="ko" label="Korea">
   Your browser does not support the video tag.
 </video>
 
