--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <video width="1280" height="960" controls>
   <source src="https://minuke73.github.io/donga_test/test2.mp4" type="video/mp4">
-  <track src="https://minuke73.github.io/donga_test/1-01-1-1_4 소프트웨어의 종류_v1.vtt" default="default" kind="subtitles" srclang="ko" label="Korea">
+  <track src="https://minuke73.github.io/donga_test/1-01-1-2_1 하드웨어와 소프트웨어의 유기적 관계_v1.vtt" default="default" kind="subtitles" srclang="ko" label="Korea">
   Your browser does not support the video tag.
 </video>
 
