--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <video width="1280" height="960" controls>
   <source src="https://minuke73.github.io/donga_test/test2.mp4" type="video/mp4">
-  <track src="https://minuke73.github.io/donga_test/1-01-1-2_2 컴퓨팅 시스템의 동작 원리_v1.vtt" default="default" kind="subtitles" srclang="ko" label="Korea">
+  <track src="https://minuke73.github.io/donga_test/1-01-1-2_3 컴퓨팅 시스템의 시작과 종료_v1.vtt" default="default" kind="subtitles" srclang="ko" label="Korea">
   Your browser does not support the video tag.
 </video>
 
