--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <video width="1280" height="960" controls>
   <source src="https://minuke73.github.io/donga_test/test2.mp4" type="video/mp4">
-  <track src="https://minuke73.github.io/donga_test/1-02-2-2_1 피지컬 컴퓨팅 시스템의 구성 요소 선택_v1.vtt" default="default" kind="subtitles" srclang="ko" label="Korea">
+  <track src="https://minuke73.github.io/donga_test/1-02-2-2_2 마이크로컨트롤러 사용 과정_v1.vtt" default="default" kind="subtitles" srclang="ko" label="Korea">
   Your browser does not support the video tag.
 </video>
 
